daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N19_bad_downgrade/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840e7cf35fd6f968a98df6e9e6878da4e9fcb5dda74f39d680903efa5b4381c83119e60b001ff25448c79ceb8685b471fd4e10afb055f2743da948397ca21adfab3
